# gssdp-gi

libgssdp/: Makefile.am
